crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__function__tests__function_no_args_with_ranges.snap
---
source: crates/sith_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
(
    [
        FunctionDef(
            FunctionDefStmt {
                range: 0..13,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..7,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        PassStmt {
                            range: 9..13,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
