crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__function__tests__function_pos_and_kw_only_args.snap
---
source: crates/sith_python_parser/src/parser/tests/function.rs
expression: parse_ast
---
(
    [
        FunctionDef(
            FunctionDefStmt {
                range: 0..32,
                is_async: false,
                decorator_list: [],
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                type_params: None,
                parameters: Parameters {
                    range: 5..26,
                    posonlyargs: [],
                    args: [
                        ParameterWithDefault {
                            range: 6..7,
                            parameter: Parameter {
                                range: 6..7,
                                name: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 9..10,
                            parameter: Parameter {
                                range: 9..10,
                                name: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 12..13,
                            parameter: Parameter {
                                range: 12..13,
                                name: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [
                        ParameterWithDefault {
                            range: 18..19,
                            parameter: Parameter {
                                range: 18..19,
                                name: Identifier {
                                    id: "d",
                                    range: 18..19,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 21..22,
                            parameter: Parameter {
                                range: 21..22,
                                name: Identifier {
                                    id: "e",
                                    range: 21..22,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                        ParameterWithDefault {
                            range: 24..25,
                            parameter: Parameter {
                                range: 24..25,
                                name: Identifier {
                                    id: "f",
                                    range: 24..25,
                                },
                                annotation: None,
                            },
                            default: None,
                        },
                    ],
                    kwarg: None,
                },
                returns: None,
                body: [
                    Pass(
                        PassStmt {
                            range: 28..32,
                        },
                    ),
                ],
            },
        ),
    ],
    [],
)
